added my new Blockchian article

--- a/index.html
+++ b/index.html
@@ -49,6 +49,42 @@
         </section>
 
         <section>
+            <div class="blockchain">
+                <div>
+                    <figure>
+                        <img src="./media/image/body-image/bitcoin01.jpg" alt="Blockchain is the most latest Technology">
+                        <figcaption>
+                            Blockchain is the most latest Technology for use every sector and easily accessible.
+                        </figcaption>
+                    </figure>
+                </div>
+                <div>
+                    <h1 class="blockchain-title">
+                        Fascinating Examples Of How Blockchain Is Used In Insurance, Banking And Travel
+                    </h1>
+                    <section class="blockchain-title-description">
+                        <p>
+                            Blockchain technology promises to revolutionize many aspects of how we do business and, if you believe <br> the blockchain hype (of which there is plenty), may even be as disruptive as the internet was before it.
+                        </p>
+                        <p>
+                            Despite this, practical, real-world examples of blockchain technology can be a little thin on the ground <br> and that makes it harder for businesses to envision how they might implement the technology in the future. <br> In this article, I look at three industries that are realizing tangible benefits from blockchains, potentially <br> leading the way for other industries to follow.
+                        </p>
+                        <p>
+                            I've written a more detailed blockchain explainer elsewhere, so I'll try to keep this overview brief. <br> Blockchain technology promises a practical solution to the challenges of storing, managing, and <br> <mark>protecting data</mark> . It provides a useful and highly secure way of authenticating information, identities, <br> transactions, and more creating a super-secure record that can be updated in real-time.
+                        </p>
+
+                        <details>
+                            <summary>Why are we use Blockchain Technology?</summary>
+                            <p>
+                                A blockchain, therefore, is basically a way of <strong>storing data</strong>. To put it in more technical terms, it's a form of open, distributed ledger (like a database), where the data is distributed (duplicated) across many computers. The ledger may be decentralized (i.e., with no one central administrator), and information may be authenticated via a peer-to-peer system.
+                            </p>
+                        </details>
+                    </section>
+                </div>
+            </div>
+        </section>
+
+        <section>
             <h2 class="plan-skill">My Plans</h2>
             <div class="all-skill-info">
                 <div class="all-info-main">
